--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,22 +1,21 @@
 .header__lang-link {
     margin-top: 18px;
+    font-family: Inter;
     font-size: 24px;
     line-height: 28px;
     font-style: normal;
     font-weight: normal;
+    text-decoration: none;
     color: inherit;
+    transition: all 0.35s ease;
+}
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
 
 .header__lang-link:nth-last-of-type(1) {
-    margin-left: 18px;
-}
-
-@media screen and (max-width: 1279px) {
-
-}
-
-@media screen and (max-width: 1023px) {
-
+     margin-left: 18px;
 }
 
 @media screen and (max-width: 767px) {
