--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,12 @@
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__image-wrap/lead__image-wrap.css);
 
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__title/intro__title.css);
+
 @font-face {
     font-family: "Inter";
     src: url("../fonts/Inter-Regular.woff2") format("woff2"),
