--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,11 @@
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__background/cover__background.css);
+
 @font-face {
     font-family: "Inter";
     src: url("../fonts/Inter-Regular.woff2") format("woff2"),
