--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,11 @@
 .page {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;/**/
+    min-width: 320px;
+    max-width: 1184px;
+    min-height: 100vh;
     margin: 0 auto;
+    font-family: 'Inter', Arial, sans-serif;
     background-color: #2A2C2F;
     color: #FFFFFF;
 }
