--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,18 +1,14 @@
 .place__link {
     margin: 0;
     padding: 0;
-    font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-}
-
-.place__link a {
     color: inherit;
     transition: all 0.35s ease;
 }
 
-.place__link a:hover {
+.place__link:hover {
     opacity: 0.8;
 }
