--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,12 +3,12 @@
     margin-bottom: 12px;
     padding: 0;
 
-    font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 2px;
+    text-transform: uppercase;
 
     color: #aaaaaa;
 }
