--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,9 +3,8 @@
     flex-direction: column;
     width: 984px;
     max-width: 100%;
-    margin: 0 auto 92px;
+    margin: 0 auto;
     padding: 0;
-    list-style: none;
 }
 
 @media screen and (max-width: 1279px) {
@@ -16,7 +15,6 @@
 
 @media screen and (max-width: 1023px) {
     .places {
-        margin-bottom: 90px;
         padding: 0 24px;
         box-sizing: border-box;
     }
