--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,8 +2,14 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    padding: 24px 48px;
+    padding: 24px 0;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 1279px) {
+    .footer {
+        padding: 24px 48px;
+    }
 }
 
 @media screen and (max-width: 1023px) {
