--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,3 +9,21 @@
     background-color: #2A2C2F;
     color: #FFFFFF;
 }
+
+@media screen and (max-width: 1279px) {
+    .page {
+        max-width: 1024px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .page {
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .page {
+        max-width: 100%;
+    }
+}
