--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -12,3 +12,15 @@
 
     color: #aaaaaa;
 }
+
+@media screen and (max-width: 1023px) {
+    .place__url-heading {
+        margin-bottom: 14px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__url-heading {
+        margin-bottom: 12px;
+    }
+}
