--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -7,3 +7,15 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 1023px) {
+    .place__website {
+        padding-bottom: 2px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__website {
+        padding-bottom: 0;
+    }
+}
